Fix Vercel build configuration.

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
-  "buildCommand": "pnpm run build:frontend",
+  "buildCommand": "pnpm --filter frontend build",
   "outputDirectory": "frontend/.next",
   "installCommand": "pnpm install"
 }
+
